; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_uimain.c_ui_paint_bitmap.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_uimain.c_ui_paint_bitmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bitmap = type { i32, i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ui_paint_bitmap(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca %struct.bitmap, align 8
  store i32 %0, i32* %8, align 4
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32* %6, i32** %14, align 8
  %16 = load i32, i32* %12, align 4
  %17 = getelementptr inbounds %struct.bitmap, %struct.bitmap* %15, i32 0, i32 0
  store i32 %16, i32* %17, align 8
  %18 = load i32, i32* %13, align 4
  %19 = getelementptr inbounds %struct.bitmap, %struct.bitmap* %15, i32 0, i32 1
  store i32 %18, i32* %19, align 4
  %20 = load i32*, i32** %14, align 8
  %21 = getelementptr inbounds %struct.bitmap, %struct.bitmap* %15, i32 0, i32 2
  store i32* %20, i32** %21, align 8
  %22 = load i32, i32* %8, align 4
  %23 = load i32, i32* %9, align 4
  %24 = load i32, i32* %10, align 4
  %25 = load i32, i32* %11, align 4
  %26 = call i32 @ui_memblt(i32 12, i32 %22, i32 %23, i32 %24, i32 %25, %struct.bitmap* %15, i32 0, i32 0)
  ret void
}

declare dso_local i32 @ui_memblt(i32, i32, i32, i32, i32, %struct.bitmap*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
